src/snapshots/clight__lexer__tests__display.snap
---
source: src/lexer.rs
expression: result
snapshot_kind: text
---
[
    "'identifier'",
    "'hex'",
    "'binary'",
    "'decimal'",
    "'string'",
    "'+'",
    "'+='",
    "'-'",
    "'-='",
    "'/'",
    "'/='",
    "'*'",
    "'*='",
    "'%'",
    "'='",
    "'!'",
    "'&'",
    "'^'",
    "'~'",
    "'|'",
    "'?'",
    "'^='",
    "'=='",
    "'!='",
    "'&&'",
    "'^'",
    "'^'",
    "'<='",
    "'||'",
    "'<'",
    "'>='",
    "'>'",
    "'++'",
    "'--'",
    "'>>'",
    "'<<'",
    "'('",
    "')'",
    "'{'",
    "'}'",
    "'['",
    "']'",
    "','",
    "'.'",
    "':'",
    "';'",
    "'->'",
    "'true'",
    "'false'",
    "'for'",
    "'if'",
    "'else'",
    "'return'",
    "'while'",
    "'let'",
    "'enum'",
    "'strucT'",
    "'union'",
    "'tagUnion'",
    "'type'",
    "'void'",
    "'char'",
    "'int'",
    "'uint'",
    "'identifier'",
    "'bool'",
    "')'",
    "'eof'",
]
