src/snapshots/clight__lexer__tests__keyword.snap
---
source: src/lexer.rs
expression: result
snapshot_kind: text
---
[
    Token {
        kind: If,
        token: "if",
        offset: 0,
    },
    Token {
        kind: Whitespace,
        token: " ",
        offset: 2,
    },
    Token {
        kind: For,
        token: "for",
        offset: 3,
    },
    Token {
        kind: Whitespace,
        token: " ",
        offset: 6,
    },
    Token {
        kind: While,
        token: "while",
        offset: 7,
    },
    Token {
        kind: Whitespace,
        token: " ",
        offset: 12,
    },
    Token {
        kind: Return,
        token: "return",
        offset: 13,
    },
    Token {
        kind: Whitespace,
        token: " ",
        offset: 19,
    },
    Token {
        kind: Struct,
        token: "struct",
        offset: 20,
    },
    Token {
        kind: Whitespace,
        token: " ",
        offset: 26,
    },
    Token {
        kind: Enum,
        token: "enum",
        offset: 27,
    },
    Token {
        kind: Whitespace,
        token: " ",
        offset: 31,
    },
    Token {
        kind: Union,
        token: "union",
        offset: 32,
    },
    Token {
        kind: Whitespace,
        token: " ",
        offset: 37,
    },
    Token {
        kind: TagUnion,
        token: "tagunion",
        offset: 38,
    },
    Token {
        kind: Whitespace,
        token: " ",
        offset: 46,
    },
    Token {
        kind: Type,
        token: "type",
        offset: 47,
    },
    Token {
        kind: Eof,
        token: "",
        offset: 51,
    },
]
