src/snapshots/clight__lexer__tests__string_literal_escaping.snap
---
source: src/lexer.rs
expression: result
snapshot_kind: text
---
[
    Token {
        kind: Literal(
            String,
        ),
        token: "\"\\\"\"",
        offset: 0,
    },
    Token {
        kind: Eof,
        token: "",
        offset: 4,
    },
]
