src/snapshots/clight__lexer__tests__string_literals.snap
---
source: src/lexer.rs
expression: result
snapshot_kind: text
---
[
    Token {
        kind: Literal(
            String,
        ),
        token: "\"abc\"",
        offset: 0,
    },
    Token {
        kind: Literal(
            String,
        ),
        token: "'abc'",
        offset: 6,
    },
    Token {
        kind: Literal(
            String,
        ),
        token: "\"abc'\"",
        offset: 12,
    },
    Token {
        kind: Literal(
            String,
        ),
        token: "'abc\"'",
        offset: 19,
    },
    Token {
        kind: Eof,
        token: "",
        offset: 25,
    },
]
